fix(style.css) - Fix input in Event Section

--- a/index.html
+++ b/index.html
@@ -80,6 +80,15 @@
             </tbody>
         </table>
     </div>
-    <div class="event_section"> </div>
+    <div class="event_section">
+        <ul>
+            <li>Hello</li>
+            <li>Testing</li>
+        </ul>
+        <form action="">
+            <input type="text">
+            <button>Add Task</button>
+        </form>
+    </div>
 </body>
 </html>
