--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
 </head>
 <body>
-    <p class="time">13:35</p>
+    <p id="time" class="time"></p>
     <div class="calendar_body">
         <div class="calendar_head">
             <p>January 2023</p>
@@ -81,7 +81,7 @@
             </tbody>
         </table>
     </div>
-    <div class="event_section">
+    <div id="event_section" class="event_section">
         <ul>
             <li>Hello</li>
             <li>Testing</li>
