--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <p id="time" class="time"></p>
-    <div class="calendar_body">
+    <div class="calendar_body slide-in-elliptic-left-fwd">
         <div class="calendar_head">
             <p>January 2023</p>
             <div id="control_arrow" class="control_arrow">
