Добавил даты динамически, поймал ошибки на некоторых месяцах.

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
         <div class="calendar_head">
             <p id="p_Mounth_Years">January 2023</p>
             <div id="control_arrow" class="control_arrow">
-                <img src="./img/icon/Arrow down.png" alt="">
-                <img src="./img/icon/Arrow_up.png" alt="">
+                <img id="back_month" src="./img/icon/Arrow down.png" alt="">
+                <img id="next_month" src="./img/icon/Arrow_up.png" alt="">
             </div>
         </div>
         
@@ -35,7 +35,7 @@
             <tbody id="dates">
                 <tr>
                     <td>1</td>
-                    <td class="event_indicator">2</td>
+                    <td>2</td>
                     <td>3</td>
                     <td>4</td>
                     <td>5</td>
