--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
         </div>
         
         <form action="">
-            <input type="time" class="event_time" id="event_time">
+            <input type="time" class="event_time" id="event_time" required>
             <input class="event_text" id="event_text" type="text" required>
             <button>Add Task</button>
         </form>
