работаю над добавлением ивентов - ловлю баги

--- a/index.html
+++ b/index.html
@@ -93,10 +93,10 @@
             </ul>
         </div>
         
-        <form action="">
+        <form id="myForm" action="">
             <input type="time" class="event_time" id="event_time" required>
-            <input class="event_text" id="event_text" type="text" required>
-            <button>Add Task</button>
+            <input class="event_text" id="event_text" type="text" placeholder="Add your task" required>
+            <button id="form_button">Add Task</button>
         </form>
     </div>
 
