--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                     <td>10</td>
                     <td>11</td>
                     <td>12</td>
-                    <td>13</td>
+                    <td class="event_indicator">13</td>
                     <td>14</td>
                 </tr>
                 <tr>
@@ -84,12 +84,10 @@
     <div id="event_section" class="event_section">
         <div class="event_box">
             <ul class="tasks_time">
-                <li>10:20</li>
-                <li>10:20</li>
+                No Events
             </ul>
             <ul class="tasks">
-                <li> - Hello</li>
-                <li> - Testing</li>
+                
             </ul>
         </div>
         
